--- a/pom.xml
+++ b/pom.xml
@@ -450,8 +450,8 @@
 
 		<dependency>
 			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.3</version>
+			  <artifactId>ojdbc6</artifactId>
+			  <version>11.2.0.3</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -497,13 +497,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>proxool</groupId>
+			<groupId>com.cloudhopper.proxool</groupId>
 			<artifactId>proxool</artifactId>
 			<version>0.9.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>proxool</groupId>
+			<groupId>com.cloudhopper.proxool</groupId>
 			<artifactId>proxool-cglib</artifactId>
 			<version>0.9.1</version>
 			<scope>test</scope>
@@ -551,7 +551,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.taobao.tbdatasource</groupId>
 			<artifactId>tbdatasource</artifactId>
 			<version>2.0.2</version>
@@ -563,7 +563,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+ -->
 		<dependency>
 			<groupId>org.javasimon</groupId>
 			<artifactId>javasimon-spring</artifactId>
